init adobe project

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "testId": "a6f79752-aca7-4920-9fd0-ce9338c50451",
-  "name": "Image Gallery",
+  "name": "MemerAI",
   "version": "1.0.0",
   "manifestVersion": 2,
   "requirements": {
@@ -17,10 +17,7 @@
       "id": "panel1",
       "main": "index.html",
       "permissions": {
-        "sandbox": [
-          "allow-popups",
-          "allow-popups-to-escape-sandbox"
-        ]
+        "sandbox": ["allow-popups", "allow-popups-to-escape-sandbox"]
       }
     }
   ]
