--- a/package.json
+++ b/package.json
@@ -28,11 +28,24 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.35.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
+    "@mui/styled-engine-sc": "^6.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-spectrum/theme-express": "^3.0.0-alpha.12",
     "@spectrum-icons/express": "^3.0.0-alpha.17",
     "@spectrum-icons/illustrations": "^3.6.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.447.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@adobe/ccweb-add-on-scripts": "^2.3.0",
