--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "package": "ccweb-add-on-scripts package --use webpack",
     "prepare": "husky || true",
     "setup:icons": "node ./.setupicons.js",
-    "start": "ccweb-add-on-scripts start --use webpack"
+    "start": "ccweb-add-on-scripts start --use webpack",
+    "build:css": "tailwindcss build src/input.css -o src/output.css"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -43,6 +44,7 @@
     "lucide-react": "^0.447.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
@@ -53,6 +55,7 @@
     "@babel/preset-env": "7.24.8",
     "@babel/preset-react": "7.24.7",
     "@tabler/icons": "^3.11.0",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "9.1.3",
     "babel-preset-react-app": "10.0.1",
     "copy-webpack-plugin": "12.0.2",
@@ -65,9 +68,12 @@
     "html-webpack-plugin": "5.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
     "prettier": "^3.3.3",
     "sharp": "^0.33.4",
     "style-loader": "3.3.4",
+    "tailwindcss": "^3.4.13",
     "webpack": "5.91.0",
     "webpack-cli": "5.1.4"
   }
