--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@spectrum-icons/illustrations": "^3.6.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.21.0",
+    "firebase": "^10.14.0",
     "lucide-react": "^0.447.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
